--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
-    <h1 class=".tk-museo-sans">Roberto Pedroso</h1>
+    <h1 class="tk-museo-sans">Roberto Pedroso</h1>
   </body>
 </html>
