completed home page, added icons, fixed css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Conforming XHTML 1.0 Strict Template</title>
+    <title>Roberto Pedroso</title>
 
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="description" content="" />
@@ -16,5 +16,19 @@
   </head>
   <body>
     <h1>Roberto Pedroso</h1>
+    <p>Philosophy student at the University of Chicago.</p>
+    <p>You can follow me on:</p>
+    <ul>
+      <li><a href="http://www.facebook.com/nick.pedroso"><img width="75px" src="img/facebook.png" /></a></li>
+      <li><a href="http://twitter.com/#!/robertonpedroso"><img width="75px" src="img/twitter.png" /></a></li>
+      <li><a href="http://www.last.fm/user/rnpg1014"><img width="75px" src="img/lastfm.png" /></a></li>
+      <li><a href="http://www.delicious.com/rnpg1014"><img width="75px" src="img/delicious.png" /></a></li>
+    </ul>
+    <p>If you're really brave, you can poke around my projects on
+      <a href="https://github.com/robertopedroso">github</a>. Beware: there be
+      dragons.</p>
+    <p>You can contact me at
+      <a href="mailto:me@rpedroso.com">me@rpedroso.com</a>. Seriously, it's a
+    catch-all, so anything before the @ sign will go to my inbox.</p>
   </body>
 </html>
