Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Roberto Pedroso</title>
 
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta name="description" content="Roberto Pedroso's landing page" />
+    <meta name="keywords" content="roberto pedroso, roberto, pedroso, nick, nicholas, philosophy, university of chicago" />
 
     <link rel="stylesheet" type="text/css" href="css/home.css" media="all" />
 
