Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Roberto Pedroso</title>
 
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <meta name="description" content="Roberto Pedroso's landing page" />
+    <meta name="description" content="Roberto Pedroso is a philosophy student at the University of Chicago. He is also an educator and a marketing strategist." />
     <meta name="keywords" content="roberto pedroso, roberto, pedroso, nick, nicholas, philosophy, university of chicago" />
 
     <link rel="stylesheet" type="text/css" href="css/home.css" media="all" />
