Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="description" content="Roberto Pedroso is a philosophy student at the University of Chicago. He is also an educator and a marketing strategist." />
-    <meta name="keywords" content="roberto pedroso, roberto, pedroso, nick, nicholas, philosophy, university of chicago" />
+    <meta name="keywords" content="roberto pedroso, nick pedroso, roberto, pedroso, nick, nicholas, philosophy, university of chicago" />
     <meta name="google-site-verification" content="ViO0ODHKsLH433tGMF4UjyieSwpcX_nzHS2E3GtHs40" />
 
     <link rel="stylesheet" type="text/css" href="css/home.css" media="all" />
