Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -30,5 +30,17 @@
     <p>You can contact me at
       <a href="mailto:me@rpedroso.com">me@rpedroso.com</a>. Seriously, it's a
     catch-all, so anything before the @ sign will go to my inbox.</p>
+
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-20417343-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </body>
 </html>
