--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         line-height: 160%;
       }
 
+      p strong {
+        color: #e8e8e8;
+      }
+
       a {
         color: #7cafc2;
         text-decoration: none;
@@ -49,15 +53,14 @@
     <h1>Roberto Pedroso</h1>
 
     <p>
-      <em>I'm a Software Architect</em> currently living in New York City. I help organizations make
-      technical decisions that meet project objectives while sustaining long-term growth.
-      Currently, I'm the principle engineer at <a href="https://joor.com/">JOOR</a>.
+      <strong>I'm a Software Architect</strong> currently living in New York City. I help organizations grow their teams and solve technical problems using simple, sustainable 
+      solutions.
     </p>
 
     <p>
-      I've been writing software since I was 8, and have been <em>paid</em> to do it
-      for the last 6 years. My previous role was at
-      <a href="https://www.lifestation.com/">LifeStation</a>.
+       Currently, I'm the principle engineer at <a href="https://joor.com/">JOOR</a>.
+       I've been writing software since I was 8, and have been paid to do it for the last
+       6 years. My previous role was at <a href="https://www.lifestation.com/">LifeStation</a>.
     </p>
 
     <p>
