make content width more responsive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
       body {
         margin: 10% auto;
-        max-width: 960px;
+        max-width: 50vw;
 
         background-color: #181818;
         color: #b8b8b8;
