Fix typo in copy

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </p>
 
     <p>
-       Currently, I'm the principle engineer at <a href="https://joor.com/">JOOR</a>.
+       Currently, I'm the principal engineer at <a href="https://joor.com/">JOOR</a>.
        I've been writing software since I was 8, and have been paid to do it for the last
        6 years. My previous role was at <a href="https://www.lifestation.com/">LifeStation</a>.
     </p>
